--- a/style.css
+++ b/style.css
@@ -8,24 +8,25 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   margin-top: 50px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 20px;
+  font-family: monospace, 'Courier New', Courier;
+  font-size: 18px;
 }
 
-p {
+#game-container p {
   line-height: 1px; /* within paragraph */
   margin-bottom: 15px; /* between paragraphs */
-  }
+}
 
 .images-container {
   height: 100px;
   width: 400px;
-  display: flex;
   margin-top: 50px;
   justify-content: space-between;
+  display: flex;
 }
 
 img {
   height: 100px;
-  }
+}
